docs: add floop pack installation section to README
Also update goreleaser to publish the floop pack with releases.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -43,3 +43,8 @@ changelog:
       - "^docs:"
       - "^test:"
       - "^ci:"
+
+release:
+  extra_files:
+    - glob: .floop/packs/nvandessel-frond-*.fpack
+      name_template: nvandessel-frond.fpack
